filters by state and city
